--- a/wiki/SupportedWikiSyntax.wiki
+++ b/wiki/SupportedWikiSyntax.wiki
@@ -32,6 +32,6 @@ Only single-level lists are currently supported.
 
 =Tables=
 
-|| cell 0,0 || cell 1,0 || cell 2,0 ||
-|| cell 0,1 || cell 1,1 || cell 2,1 ||
-|| cell 0,2 || cell 1,2 || cell 2,2 ||
+|| cell 0,0 || ,,cell 1,0,, || ^cell 2,0^ ||
+|| ~~*cell 0,1*~~ || ~~cell 1,1~~ || _cell 2,1_ ||
+|| ^*cell 0,2*^ || cell 1,2 || *cell 2,2* ||
