--- a/wiki/SupportedWikiSyntax.wiki
+++ b/wiki/SupportedWikiSyntax.wiki
@@ -29,7 +29,7 @@ Only single-level lists are currently supported.
   # Item 4 is ~~stricken~~.
   # Item 5 is ,,subscript,,.
   # Item 6 is ^superscript^.
-  # Do `<backticks block parsing of <`?
+  # Do `<backticks block parsing of <`? (works as of r35)
 
 =Tables=
 
