--- a/wiki/HomePage.wiki
+++ b/wiki/HomePage.wiki
@@ -12,9 +12,10 @@ Wikiwym is wiki syntax parser, implemented in !JavaScript, which tries to reason
 *Primary Features:*
 
   * Fairly Small. The core parser lives in one file and has no external dependencies.
-  * It is _not_ based on regular expressions, and is more robust than
+  * It is _not_ based on regular expressions. For the most part it scans char-by-char, so it is more robust in handling things like nested markup (e.g. _*italicized bold*_) than regex-based implementations.
   * Can handle "most" Google Code wiki markup.  See [SupportedWikiSyntax] for the list of what we believe works.
   * The main parser code has a one-class, one-function interface, so it's easy to use.
+  * If the parser detects mis-closed inlined markup it adds a big, fat, red and yellow warning marker to the output.
 
 *Primary Misfeatures:*
 
@@ -22,6 +23,7 @@ Wikiwym is wiki syntax parser, implemented in !JavaScript, which tries to reason
   * "Inline" markup (bold, italics, etc. i.e. all markup which is not for block-level items) is only processed within a single line. i'm not 100% sure we have the same meaning of "end of line" as !GoCo does.
   * Nested lists aren't yet implemented.
   * Support for `<wiki:toc>` is not yet implemented.
+  * There are not yet any configurable options. Use it as-is or hack it to suit.
 
 =Ultra-mini HOWTO=
 
