--- a/wiki/HomePage.wiki
+++ b/wiki/HomePage.wiki
@@ -12,8 +12,8 @@ Wikiwym is wiki syntax parser, implemented in !JavaScript, which tries to reason
 *Primary Features:*
 
   * Fairly Small. The core parser lives in one file and has no external dependencies.
-  * It is _not_ based on regular expressions. For the most part it scans char-by-char, so it is more robust in handling things like nested markup (e.g. _*italicized bold*_) than regex-based implementations.
-  * Can handle "most" Google Code wiki markup.  See [SupportedWikiSyntax] for the list of what we believe works.
+  * It is not based on regular expressions. For the most part it scans char-by-char, so it is more robust in handling things like nested markup (e.g. _*italicized bold*_) than regex-based implementations.
+  * Can handle "most" Google Code wiki markup.  See [SupportedWikiSyntax] for what we believe works.
   * The main parser code has a one-class, one-function interface, so it's easy to use.
   * If the parser detects mis-closed inlined markup it adds a big, fat, red and yellow warning marker to the output.
 
@@ -34,4 +34,4 @@ var g = GoogleWikiCodeParser();
 var html = g.parse( " ... wiki markup code ..." );
 }}}
 
-The file [http://code.google.com/p/wikiwym/source/browse/trunk/lib/parser.js parser.js] uses the Prototype JS library to provide a as-you-type preview of wiki code. It is demonstrated at [http://wikiwym.googlecode.com/svn/trunk/index.html]. (Achtung: at the moment (20100422) parser.js uses a completely different parser implementation than `GoogleWikiCodeParser`, so they may not behave quite the same.)
+The file [http://code.google.com/p/wikiwym/source/browse/trunk/lib/parser.js parser.js] uses the Prototype JS library to provide a as-you-type preview of wiki code. It is demonstrated at [http://wikiwym.googlecode.com/svn/trunk/index.html]. (Achtung: at the moment (20100422) parser.js uses a completely different parser implementation than `GoogleWikiCodeParser`, and they do not behave identically.)
