--- a/wiki/SupportedWikiSyntax.wiki
+++ b/wiki/SupportedWikiSyntax.wiki
@@ -13,7 +13,7 @@ A good way to get a feel for what this code can and cannot do is to browse your 
 
   * [http://fossil.wanderinghorse.net/demos/wikiwym/]
 
-From there you can browse the wiki pages from any Google Code project which has wiki pages in its Subversion repository, and they will be rendered by this code.
+From there you can browse the wiki pages from any Google Code project which has wiki pages in its Subversion repository, and they will be rendered by this code. You can also use it as an editor, including a preview, and then copy/paste the changes back into Google Code when you're happy with them.
 
 
 =Wiki-style Links=
