--- a/wiki/Bookmarklet.wiki
+++ b/wiki/Bookmarklet.wiki
@@ -19,8 +19,7 @@ javascript:void(function(){var%20s=document.createElement("script");s.src="http:
 
 (Sorry, but the !GoCo wiki won't let me create a link to that construct.
 
-<a href='javascript:void(function(){var%20s=document.createElement("script");s.src="http://wikiwym.googlecode.com/svn/trunk/bookmarklet.js";document.getElementsByTagName("head")[0].appendChild(s);}())'>If you are using our parser to view this page, try copying this link to your clipboard</a> or dragging it to your bookmark bar. (If you are viewing this page in via Google Code then that link is elided, despite the docs which say it should work.)
-
+<a href='javascript:void(function(){var%20s=document.createElement("script");s.src="http://wikiwym.googlecode.com/svn/trunk/bookmarklet.js";document.getElementsByTagName("head")[0].appendChild(s);}())' title='GoCoWiEditorPreview'>If you are using our parser to view this page, try copying this link to your clipboard</a> or dragging it to your bookmark bar. (If you are viewing this page in via Google Code then that link is elided, despite the docs which say it should work.)
 
 Then:
 
