--- a/wiki/SupportedWikiSyntax.wiki
+++ b/wiki/SupportedWikiSyntax.wiki
@@ -51,16 +51,19 @@ Someone once said:
 
 =Lists=
 
-Only single-level lists are currently supported.
+As of r140, nested lists are supported.
 
   * Item is _emphasized_.
-  * Item is *bold*.
-  * Item is *_emphasized bold_*.
+    * Item is *bold*.
+    * Item is *_emphasized bold_*.
   * Item is `backticked`.
 
   # Item is ~~stricken~~.
-  # Item is ,,subscripted,,.
-  # Item is ^superscripted^.
+    # Item is ,,subscripted,,.
+    # Item is ^superscripted^.
+      * Item is ~~*stricken boldly*~~.
+      # Item is *~~boldly stricken~~* (ans is different list type than its neighbors).
+      * Item is _*~~boldly stricken with emphasis~~*_.
   # Do `<backticks block parsing of <`? (works as of r35)
   # Can we *`bold backticked data`*? Of course. But not if we do `*asterisk inside the backticks*`.
 
