Edited wiki page through web user interface.

--- a/wiki/SupportedWikiSyntax.wiki
+++ b/wiki/SupportedWikiSyntax.wiki
@@ -5,9 +5,7 @@
 
 = Introduction =
 
-This page demonstrates the various wiki markup which is working (or believed to be working) in the [http://code.google.com/p/wikiwym/source/browse/trunk/lib/GoogleCodeWikiParser.js current parser code].
-
-For testing purposes, this page gets programmatically pulled down to a development machine and processed using [http://code.google.com/p/wikiwym/source/browse/trunk/lib/GoogleCodeWikiParser.js GoogleCodeWikiParser.js]. Last i checked, all of the tags demonstrated on this page work as they do in !GoCo (perhaps with minor layout/spacing differences).
+This page demonstrates the various wiki markup which is working (or believed to be working) in the [http://code.google.com/p/wikiwym/source/browse/trunk/lib/GoogleCodeWikiParser.js current parser code]. If you view this page using [http://fossil.wanderinghorse.net/demos/wikiwym/GoCoWi-previewer.html our wiki previewer application], the content should look more or less just like it does when rendered via the Google Code wiki site.
 
 The goal is not to achieve 100% compatibility with !GoCo, but to have a tool which can be used to provide a reasonably accurate preview of a !GoCo-formatted page before committing it to a !GoCo-hosted project's source code repository. It "could" be used as the bases of a standalone wiki implementation, but that's not the goal.
 
