Edited wiki page through web user interface.

--- a/wiki/InstallingThePreviewApp.wiki
+++ b/wiki/InstallingThePreviewApp.wiki
@@ -1,3 +1,4 @@
+
 #summary How to install the previewer application on a web server.
 <wiki:toc></wiki:toc>
 
@@ -9,19 +10,18 @@
 
   * Our [http://code.google.com/p/wikiwym/source/checkout source code].
   * PHP5 with JSON support and the the so-called `fopen()` wrappers, which allow PHP to open remote URLs using `fopen()`.
+  * The web server must be able to open http connections to `code.google.com`. On a home server this is not normally a problem, but can be if inside a firewall which restrict's the server's access to the outside world (e.g. an organization where servers cannot resolve external hostnames).
   * It is untested on non-Apache servers and is known to not work on Windows servers (but _why_ is unknown).
 
 = Setting up Apache =
 
-If you run Apache/PHP locally then...
-
-Add an entry to your `/etc/hosts` (or equivalent):
+If you run Apache/PHP locally then you will want to an entry to your `/etc/hosts` (or equivalent):
 
 {{{
 127.0.0.1 localhost <any local aliases> wikiwym
 }}}
 
-In your Apache configuration, add:
+In your Apache configuration, add something like:
 
 {{{
 <VirtualHost *:80>
