Edited wiki page through web user interface.

--- a/wiki/TODOs.wiki
+++ b/wiki/TODOs.wiki
@@ -5,6 +5,7 @@
 The more notable TODOs, in no particular order:
 
   * Certain corner cases (or odd usages) of the inline markups do not match GC's interpretations.
+  * Our interpretation of "end of line" is stricter than Google's - we should collapse adjacent, non-block-markup lines which are separated only by a newline, to allow inline markup to be more compatible with GC.
   * Refactor the parser to generate an object tree. This could then be used to generate formats other than HTML.
   * Add a way to make the parser aware of other page names within the project, so that it knows which !WikiWords to auto-link.
   * `<wiki:comment>` ([http://code.google.com/p/support/wiki/WikiSyntax#Comments]). Very low priority.
