--- a/wiki/HomePage.wiki
+++ b/wiki/HomePage.wiki
@@ -37,3 +37,7 @@ To see various live demos, visit out demo page:
   * [http://fossil.wanderinghorse.net/demos/wikiwym/]
 
 From there you can preview any Google Code-hosted project's wiki pages using our online preview tool.
+
+=Related Works=
+
+  * [http://remysharp.com/2008/04/01/wiki-to-html-using-javascript/], by Remy Sharp, supports a MediaWiki-like wiki syntax.
