--- a/wiki/SupportedWikiSyntax.wiki
+++ b/wiki/SupportedWikiSyntax.wiki
@@ -15,6 +15,10 @@ A good way to get a feel for what this code can and cannot do is to browse your 
 
 From there you can browse the wiki pages from any Google Code project which has wiki pages in its Subversion repository, and they will be rendered by this code. You can also use it as an editor, including a preview, and then copy/paste the changes back into Google Code when you're happy with them.
 
+Or you can see a custom full-fledged wiki site which uses this parser as its main renderer:
+
+  * [http://fossil.wanderinghorse.net/demos/whiki/]
+
 =Inlined Markup=
 
 "Inlined" markup is stuff like *bold* and _emphasis_, which appear on elements spanning only across a single line.
